# deriving-type-checkers

./: LICENSE  README.md  Setup.hs  TypeCheckLib.cabal  buildTestSuite.sh
Examples/: FJChecker.hs  MiniMLChecker.hs
Examples/GuiTool/: FJ.hs  MiniML.hs
Examples/Parser/: FJ.hs  MiniML.hs
Examples/Printer/: FJ.hs  MiniML.hs
Examples/TypeSystems/: FJ.hs  LambdaBaseTypes.hs  LambdaExtensions.hs  MiniML.hs  SimpleLambda.hs
GuiTool/: Gui.hs  RuleTree.hs  gui.glade
Report/: abstract.tex  algorithms.tex  appendix.tex  article.tex  conclusion.tex  constraints.tex  fj.tex  gui.tex  intro.tex  library.tex  literature.bib  macros.sty  ml.tex  related.tex  settings.sty  title.tex
Report/Figures/: fj_class.tex  fj_expressions.tex  miniml.tex  ruleview.tex  simple_lambda.tex  solver.tex  solverview.tex  typeview.tex  wand_action.tex  wand_mod.tex  wand_skel.tex
Tests/: ConstraintGenerationTests.hs  ConstraintSolvingTests.hs  Profiler.hs  THTests.hs  TestSuite.hs  TypeTests.hs
Tests/Programs/: Parse&PrintFJ.hs  Parse&PrintML.hs
Tests/Programs/FJ/: Cast.java  FieldAccess.java  MethInvk.java  MethInvk2.java  MultipleMethods.java  MutuallyRec.java  ObjectCreation.java  Pair.java  Pair2.java  SubtypWithOverride.java  Subtyping.java
Tests/Programs/FJ/WrongPrograms/: WrongCast.java  WrongConstructor.java  WrongFieldAccess.java  WrongMethodInvokation.java  WrongMethodType.java  WrongObjectCreation.java  WrongOverride.java
Tests/Programs/MiniML/: abs.ml  cond.ml  double.ml  doublePair.ml  even.ml  fact.ml  fun.ml  pairs.ml  poly.ml  twice.ml
Tests/Unification/: DefUnification.hs  TermUnification.hs  TypeUnification.hs
TypeCheckLib/: AbstractSyntax.hs  AssocList.hs  Combinators.hs  ConstraintGeneration.hs  ConstraintSolving.hs  Context.hs  Evaluable.hs  Instantiation.hs  Rule.hs  Substitution.hs  Syntax.hs  THUtil.hs  Type.hs  Type.hs-boot  TypeChecker.hs  Unification.hs  Vars.hs
TypeCheckLib/AbstractSyntax/: C.hs  Def.hs  Term.hs
